{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 67,
  "lineage": "060ddad6-f1cb-39e6-5ee8-1a1af1b8909e",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:324330563691:instance/i-08ab4a6083ce0183c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ab4a6083ce0183c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a5634e636f13372f"
              }
            ],
            "primary_network_interface_id": "eni-0a5634e636f13372f",
            "private_dns": "ip-10-0-2-38.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.38",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0376f9e4a3bdebbaa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-02db05bf127ace33b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04269e5a1fcefc167",
            "tags": {
              "Name": "app-server"
            },
            "tags_all": {
              "Name": "app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02db05bf127ace33b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "324330563691",
            "id": "i-08ab4a6083ce0183c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app_sg",
            "module.security.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:324330563691:instance/i-0f7c6345ae5fc9881",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f7c6345ae5fc9881",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0530a9cceab52d308"
              }
            ],
            "primary_network_interface_id": "eni-0530a9cceab52d308",
            "private_dns": "ip-10-0-1-95.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.95",
            "public_ip": "98.92.37.200",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e6e8162081769149",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01828a8e6fec0991e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002067b4583e2edf2",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01828a8e6fec0991e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "324330563691",
            "id": "i-0f7c6345ae5fc9881",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0199faf8350e50f32",
            "arn": "arn:aws:ec2:us-east-1:324330563691:elastic-ip/eipalloc-0199faf8350e50f32",
            "association_id": "eipassoc-07e444bddd3e17ab5",
            "domain": "vpc",
            "id": "eipalloc-0199faf8350e50f32",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00cd4035c390bb5da",
            "private_dns": "ip-10-0-1-88.ec2.internal",
            "private_ip": "10.0.1.88",
            "public_dns": "ec2-100-26-83-52.compute-1.amazonaws.com",
            "public_ip": "100.26.83.52",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324330563691:internet-gateway/igw-0a5aeb216503cb16c",
            "id": "igw-0a5aeb216503cb16c",
            "owner_id": "324330563691",
            "region": "us-east-1",
            "tags": {
              "Name": "multi-tier-igw"
            },
            "tags_all": {
              "Name": "multi-tier-igw"
            },
            "vpc_id": "vpc-031e4f12e2261a695"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0199faf8350e50f32",
            "association_id": "eipassoc-07e444bddd3e17ab5",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-02d881f1435dcbb5c",
            "network_interface_id": "eni-00cd4035c390bb5da",
            "private_ip": "10.0.1.88",
            "public_ip": "100.26.83.52",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-002067b4583e2edf2",
            "tags": {
              "Name": "multi-tier-nat"
            },
            "tags_all": {
              "Name": "multi-tier-nat"
            },
            "vpc_id": "vpc-031e4f12e2261a695"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324330563691:subnet/subnet-04269e5a1fcefc167",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04269e5a1fcefc167",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324330563691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-031e4f12e2261a695"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "324330563691",
            "id": "subnet-04269e5a1fcefc167",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324330563691:subnet/subnet-0c3ea25a0fcead7d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3ea25a0fcead7d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324330563691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-031e4f12e2261a695"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "324330563691",
            "id": "subnet-0c3ea25a0fcead7d5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324330563691:subnet/subnet-002067b4583e2edf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002067b4583e2edf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "324330563691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-031e4f12e2261a695"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "324330563691",
            "id": "subnet-002067b4583e2edf2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324330563691:vpc/vpc-031e4f12e2261a695",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a4d91af8064b61a1",
            "default_route_table_id": "rtb-0bf709bbcfcdb3bab",
            "default_security_group_id": "sg-0a479da500652c1d9",
            "dhcp_options_id": "dopt-0834ecde99009d181",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-031e4f12e2261a695",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bf709bbcfcdb3bab",
            "owner_id": "324330563691",
            "region": "us-east-1",
            "tags": {
              "Name": "multi-tier-vpc"
            },
            "tags_all": {
              "Name": "multi-tier-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "324330563691",
            "id": "vpc-031e4f12e2261a695",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324330563691:security-group/sg-02db05bf127ace33b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02db05bf127ace33b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01828a8e6fec0991e"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20260129212127925700000002",
            "name_prefix": "terraform-",
            "owner_id": "324330563691",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg"
            },
            "tags_all": {
              "Name": "app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-031e4f12e2261a695"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "324330563691",
            "id": "sg-02db05bf127ace33b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324330563691:security-group/sg-0da0f8f92b491b60e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0da0f8f92b491b60e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02db05bf127ace33b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20260129212132422700000003",
            "name_prefix": "terraform-",
            "owner_id": "324330563691",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-031e4f12e2261a695"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "324330563691",
            "id": "sg-0da0f8f92b491b60e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app_sg",
            "module.security.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324330563691:security-group/sg-01828a8e6fec0991e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01828a8e6fec0991e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260129212122706500000001",
            "name_prefix": "terraform-",
            "owner_id": "324330563691",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-031e4f12e2261a695"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "324330563691",
            "id": "sg-01828a8e6fec0991e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}